# ig-unfollower-bot

./: .gitignore  IG_UNFOLLOWER_V2_SPEC.md  README.md  config.json.example  instagram-scraper-optimization.kiro.md  kiro-frontend-prompt.md  pyproject.toml  run.sh.example  run_dev.sh
api/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DataTabs.tsx  Header.tsx  MetricCard.tsx  MetricsRow.tsx  OperationStatus.tsx  ProgressBar.tsx  QuickActions.tsx  SettingsDrawer.tsx  StatusIndicator.tsx  UserRow.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/stores/: appStore.ts
frontend/src/types/: index.ts
src/ig_unfollower/: __init__.py  browser.py  comparator.py  config.py  history.py  main.py  scraper.py  skip_list.py  snapshot.py  unfollower.py
tests/: __init__.py  conftest.py  generators.py
